--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,6 @@
 // all bootstrap styles
 @import "node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/bootstrap/scss/_variables";
 // required
 /*
 @import "../../node_modules/bootstrap/scss/functions";
@@ -16,15 +17,25 @@
 
 $fontColor: #0091aa;
 $colorHeading: #be4a14;
+
 #content  // div with id: content
 {
     color: $fontColor;
 }
 
-
+.container {
+   border: 2 solid purple;
+}
 .container-fluid {
 
     background-color: green;
+    
+}
+.col-sm :nth-of-type(odd){
+    background-color: grayscale($color: #303030);
+}
+.col-sm :nth-of-type(even){
+    background-color: grayscale($color: #7e5b5b);
 }
 
 .site-header {
@@ -32,11 +43,13 @@ $colorHeading: #be4a14;
 }
 
 @include media-breakpoint-up(xs) { /**/ }
-/* 576px min width */ 
-@include media-breakpoint-up(sm) { /**/ }
-/* 768px min width */ 
+/* 576px min width sm*/ 
+@include media-breakpoint-up(sm) { /**/ 
+//
+}
+/* 768px min width md*/ 
 @include media-breakpoint-up(md) { /**/ }
-/* 992px min width */ 
+/* 992px min width lg*/ 
 @include media-breakpoint-up(lg) { /**/ }
-/* 1200px min width */ 
+/* 1200px min width xl*/ 
 @include media-breakpoint-up(xl) { /**/ }
