removed html plugin to make stable commit

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,13 +18,13 @@ $enable-responsive-font-sizes: true;
 }
 .container-fluid {
 
-    
+    border: 4 solid rgb(83, 35, 35);
 }
-
+/*
 body {
     background-image: url('/src/img/bigbk.jpg') ;
 }
-
+*/
 .site-header {
     background-color: red;
 }
