--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,45 +6,143 @@
 @import "desk-lg.scss";
 @import "desk-xl.scss";
 
-$enable-responsive-font-sizes: true;   
+$enable-responsive-font-sizes: true;
 
-#content  
-{
+#content {
     color: $primary;
 }
 
-.container {
-   border: 2 solid 600;
-}
-.container-fluid {
-
-    border: 4 solid rgb(83, 35, 35);
+.main-title {
+    text-align: center;
+    color: white;
 }
 /*
-body {
-    background-image: url('/src/img/bigbk.jpg') ;
+.container {
+   // border: 2 solid grey;
+}
+
+.container-fluid {
+
+   // border: 4 solid rgb(70, 43, 43);
 }
 */
+.mainkBk {
+    background-image: url('../img/thr-logo-knockout.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    position: absolute;
+    display:block;
+    height: 100%;
+}
+
+.pattern-b,.pattern-a,.pattern-c,.pattern-d {
+    background-size: 90%;
+    background-attachment: fixed;
+    background-position: center;
+    position: absolute;
+    display:block;
+    width: 100%;
+    height: 100%;
+}
+.pattern-a {
+    background-image: url('../img/nyc2.jpg');
+    background-repeat: no-repeat;
+}
+.pattern-b {
+    background-image: url('../img/nyc.jpg');
+    background-repeat: no-repeat;
+}
+.pattern-c {
+    background-image: url('../img/nyc3.png');
+    background-repeat: no-repeat;
+}
+/*
+.multiBK {
+    background-image:
+    url('../img/quadbk.png') left top no-repeat,
+    url('../img/quadbk.png') right top no-repeat,
+    url('../img/quadbk.png') left bottom no-repeat,
+    url('../img/quadbk.png') right bottom no-repeat;
+   // background-repeat: no-repeat;
+    //background-attachment: fixed;
+    //background-position: center;
+    background-size:300px ;
+    //position: absolute;
+    //display:block;
+    
+}
+*/
+.quarterFill{
+    position: absolute;
+    display: block;
+    width: 100%;
+    background-clip: padding-box;
+}
+
+.q1 {
+    background-color: rgba(25, 35, 175, 0.9);
+}
+.q2 {
+    background-color: rgba(175, 48, 25, 0.698);
+}
+.q3 {
+    background-color: rgba(25, 175, 70, 0.3);
+}
+.q4 {
+    background-color: rgba(175, 152, 25, 0.1);
+}
+
+.vertLine{
+    background-color: black;
+    width:4px;
+    height: 100%;
+    position: absolute;
+    top:0;
+    z-index: 110;
+}
+
+.horizLine{
+    background-color: black;
+    width:100%;
+    height: 4px;
+    position: absolute;
+    left:0;
+    z-index: 100;
+}
+
 .site-header {
     background-color: red;
 }
 
-@include media-breakpoint-up(xs) { /**/ }
-/* 576px min width sm*/ 
-@include media-breakpoint-up(sm) { /**/ 
+@include media-breakpoint-up(xs) {
+    /**/
+}
+
+/* 576px min width sm*/
+@include media-breakpoint-up(sm) {
+    /**/
 
 }
-/* 768px min width md*/ 
-@include media-breakpoint-up(md) { /**/ 
-    .col-sm{
-        background-color:blue;
+
+/* 768px min width md*/
+@include media-breakpoint-up(md) {
+
+    /**/
+    .col-sm {
+        background-color: blue;
     }
 }
-/* 992px min width lg*/ 
-@include media-breakpoint-up(lg) { 
-    .col-sm{
-        background: grey;
+
+/* 992px min width lg*/
+@include media-breakpoint-up(lg) {
+    .col-sm {
+        background: rgb(15, 6, 34);
     }
- }
-/* 1200px min width xl*/ 
-@include media-breakpoint-up(xl) { /**/ }
+}
+
+/* 1200px min width xl*/
+@include media-breakpoint-up(xl) {
+    /**/
+}
