added new intro and scroll utils

--- a/src/styles/desk-lg.scss
+++ b/src/styles/desk-lg.scss
@@ -1,6 +1,17 @@
 /* 992px min width lg*/
 @include media-breakpoint-up(lg) {
-    * {
-        color: rgb(28, 109, 52);
+
+    html {
+        font-size: .7rem;
+    }
+    .navbar-brand {
+        display: block;
+        font-size: 1rem;
+        padding-left: 10px;
+    }
+  
+
+    .header-logo{
+        width:  120px;
     }
 }
