--- a/src/styles/desk-xl.scss
+++ b/src/styles/desk-xl.scss
@@ -1,6 +1,11 @@
 /* 1200px min width xl*/
 @include media-breakpoint-up(xl) {
-    *{
-        color: blue;
+
+    html {
+        font-size: .9rem;
+    }
+
+    .header-logo{
+        width:  140px;
     }
 }
