--- a/src/styles/tablet-md.scss
+++ b/src/styles/tablet-md.scss
@@ -1,7 +1,16 @@
 /* 768px min width md*/
 @include media-breakpoint-up(md) {
 
-    * {
-        color: rgb(238, 255, 0);
+    html {
+        font-size: .7rem;
+    }
+  
+    .navbar-brand {
+        display: block;
+        font-size: 1.2rem;
+        padding-left: 10px;
+    }
+    .header-logo{
+        width:  100px;
     }
 }
