fixed scroll-control issue now perfect

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -241,22 +241,24 @@ content {
     font-size: 2em;
     font-family: thinFont!important;
     font-weight: lighter;
-    top:9vh;
+    //top:9vh;
 }
 #g1l2{
     font-family: displayFont!important;
-  top:20vh;
+ // top:20vh;
 }
 #g1l3{
     font-family: headingFont;
-    top:30vh;
+    //top:30vh;
   }
 #g1l4{
-    top: 40vh;
+    //top: 40vh;
     font-family: regFont;
   }
 #g1l5{
-    top: 55vh;
+   // top: 55vh;
+   font-family: thinFont!important;
+
 
   }
 
