--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -44,6 +44,10 @@ h4{
     font-family:thinFont!important ;
     //font-weight: 100;
 }
+h3{
+    font-family:regFont!important ;
+    //font-weight: 100;
+}
 h2{
     font-family:displayFont!important ;
     font-weight: 700;
@@ -123,23 +127,25 @@ intro {
 
 #holder {
     background-color: black;
+    background: rgba(20, 19, 20, 1);
+    background: -moz-linear-gradient(left, rgba(20, 19, 20, 1) 0%, rgba(20, 19, 20, 1) 1%, rgba(20, 19, 20, 1) 13%, rgba(74, 71, 74, 1) 46%, rgba(74, 71, 74, 1) 69%, rgba(20, 19, 20, 1) 95%, rgba(20, 19, 20, 1) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(20, 19, 20, 1)), color-stop(1%, rgba(20, 19, 20, 1)), color-stop(13%, rgba(20, 19, 20, 1)), color-stop(46%, rgba(74, 71, 74, 1)), color-stop(69%, rgba(74, 71, 74, 1)), color-stop(95%, rgba(20, 19, 20, 1)), color-stop(100%, rgba(20, 19, 20, 1)));
+    background: -webkit-linear-gradient(left, rgba(20, 19, 20, 1) 0%, rgba(20, 19, 20, 1) 1%, rgba(20, 19, 20, 1) 13%, rgba(74, 71, 74, 1) 46%, rgba(74, 71, 74, 1) 69%, rgba(20, 19, 20, 1) 95%, rgba(20, 19, 20, 1) 100%);
+    background: -o-linear-gradient(left, rgba(20, 19, 20, 1) 0%, rgba(20, 19, 20, 1) 1%, rgba(20, 19, 20, 1) 13%, rgba(74, 71, 74, 1) 46%, rgba(74, 71, 74, 1) 69%, rgba(20, 19, 20, 1) 95%, rgba(20, 19, 20, 1) 100%);
+    background: -ms-linear-gradient(left, rgba(20, 19, 20, 1) 0%, rgba(20, 19, 20, 1) 1%, rgba(20, 19, 20, 1) 13%, rgba(74, 71, 74, 1) 46%, rgba(74, 71, 74, 1) 69%, rgba(20, 19, 20, 1) 95%, rgba(20, 19, 20, 1) 100%);
+    background: linear-gradient(to right, rgba(20, 19, 20, 1) 0%, rgba(20, 19, 20, 1) 1%, rgba(20, 19, 20, 1) 13%, rgba(74, 71, 74, 1) 46%, rgba(74, 71, 74, 1) 69%, rgba(20, 19, 20, 1) 95%, rgba(20, 19, 20, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#141314', endColorstr='#141314', GradientType=1);
     color: #ebdab6;
     position: relative;
     display: block;
-    height: 10000px;
+    height: 500vh;  
     width: 100%;
     padding: 0;
     z-index: 10;
 
 }
 
-content {
-    position: relative;
-    display: block;
-    width: 100%;
-    height: 100%;
-    z-index: 20;
-}
+
 
 #logo-holder {
     display: inline-block;
@@ -193,7 +199,7 @@ content {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: rgba(20, 19, 20, 1);
+   /* background: rgba(20, 19, 20, 1);
     background: -moz-linear-gradient(left, rgba(20, 19, 20, 1) 0%, rgba(20, 19, 20, 1) 1%, rgba(20, 19, 20, 1) 13%, rgba(74, 71, 74, 1) 46%, rgba(74, 71, 74, 1) 69%, rgba(20, 19, 20, 1) 95%, rgba(20, 19, 20, 1) 100%);
     background: -webkit-gradient(left top, right top, color-stop(0%, rgba(20, 19, 20, 1)), color-stop(1%, rgba(20, 19, 20, 1)), color-stop(13%, rgba(20, 19, 20, 1)), color-stop(46%, rgba(74, 71, 74, 1)), color-stop(69%, rgba(74, 71, 74, 1)), color-stop(95%, rgba(20, 19, 20, 1)), color-stop(100%, rgba(20, 19, 20, 1)));
     background: -webkit-linear-gradient(left, rgba(20, 19, 20, 1) 0%, rgba(20, 19, 20, 1) 1%, rgba(20, 19, 20, 1) 13%, rgba(74, 71, 74, 1) 46%, rgba(74, 71, 74, 1) 69%, rgba(20, 19, 20, 1) 95%, rgba(20, 19, 20, 1) 100%);
@@ -201,8 +207,14 @@ content {
     background: -ms-linear-gradient(left, rgba(20, 19, 20, 1) 0%, rgba(20, 19, 20, 1) 1%, rgba(20, 19, 20, 1) 13%, rgba(74, 71, 74, 1) 46%, rgba(74, 71, 74, 1) 69%, rgba(20, 19, 20, 1) 95%, rgba(20, 19, 20, 1) 100%);
     background: linear-gradient(to right, rgba(20, 19, 20, 1) 0%, rgba(20, 19, 20, 1) 1%, rgba(20, 19, 20, 1) 13%, rgba(74, 71, 74, 1) 46%, rgba(74, 71, 74, 1) 69%, rgba(20, 19, 20, 1) 95%, rgba(20, 19, 20, 1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#141314', endColorstr='#141314', GradientType=1);
-
+*/
     z-index: 10;
+}
+
+#overview-top,
+#technology {
+    padding:10px;
+    background-color: rgb(0,0,0);
 }
 
 .now-set {
@@ -218,26 +230,20 @@ content {
 
     //animation: opacity 2s linear;
 }
-.fxd{
-    position: fixed;
-    overflow: hidden;
-}
-.rel{
-    position: relative;
-}
 
-#g1 {
-    z-index:110 ;
+#g1,
+#g2 {
     width: 100%;
     top:130vh;
     position: absolute;
     display: block!important;
     margin: auto;
-
-  
 }
+#g1 { z-index: 110;background-color: pink; }
+#g2 { z-index: 111; }
 
-#g1l1{
+#g1l1,
+#g2l1{
     font-size: 2em;
     font-family: thinFont!important;
     font-weight: lighter;
@@ -258,15 +264,22 @@ content {
 #g1l5{
    // top: 55vh;
    font-family: thinFont!important;
-
-
   }
+#g2l2{
+    font-family: displayFont!important;
 
+}
 #g1l1, 
 #g1l2,
 #g1l3,
 #g1l4,
-#g1l5 {
+#g1l5,
+#g2l1,
+#g2l2,
+#g2l3,
+#g2l4,
+#g2l5,
+#g2l6 {
     position: fixed;
     display: none;
     opacity: 0;
