fixed video list data, code cleanup

--- a/src/styles/mobile-sm.scss
+++ b/src/styles/mobile-sm.scss
@@ -5,7 +5,8 @@
         font-size: .8rem;
     }
     #holder {
-        width: 400px;
+        /*width: 400px;*/
+        width: 100%;
     }
     .navbar-brand {
         display: none;
