--- a/src/styles/tablet-md.scss
+++ b/src/styles/tablet-md.scss
@@ -5,7 +5,8 @@
         font-size: .7rem;
     }
     #holder {
-        width: 576px;
+        /*width: 576px;*/
+        width:100%;
     }
     .navbar-brand {
         display: block;
