--- a/src/styles/desk-xl.scss
+++ b/src/styles/desk-xl.scss
@@ -4,9 +4,11 @@
     html {
         font-size: .9rem;
     }
+    /*
     #holder {
         width: 500px;
     }
+    */
     .header-logo{
         width:  140px;
     }
