--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -86,6 +86,27 @@ header {
     height: 120px;
 
 }
+.video-player{
+    margin: auto;
+    left:100px;
+}
+
+#toolTip {
+    background: #333;
+    color: white;
+    font-weight: bold;
+    padding: 4px 8px;
+    font-size: 13px;
+    border-radius: 4px;
+  }
+
+#vid-holder {
+    position: fixed;
+    top:10px;
+    left:20%;
+    width: 60%;
+    z-index: 2000;
+}
 
 #full-screen-spacer {
     position: relative;
